added calculator link and removed unnecessary images from directories

--- a/public/weather-map/css/weather_map.css
+++ b/public/weather-map/css/weather_map.css
@@ -9,7 +9,7 @@ div.day {
 }
 
 body{
-	background-image: url("field_Fotor.jpg");
+	background-image: url("background.jpg");
 }
 
 #header-container{
