--- a/public/calculator/calculator.css
+++ b/public/calculator/calculator.css
@@ -4,7 +4,7 @@
 
 
 h1 {
-	color: #72bcd4;
+	color: #EF3054;
 	text-align: center;
 	font-family: 'Atma', cursive;
 }
@@ -38,6 +38,7 @@ h1 {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+
 	
 	/* Better text styling */
 	
@@ -61,10 +62,10 @@ html {
 	margin: 100px auto;
 	padding: 20px 20px 9px;
 	
-	background: #9dd2ea;
-	background: linear-gradient(#9dd2ea, #8bceec);
+	background: #8C7051;
+	
 	border-radius: 3px;
-	box-shadow: 0px 4px #009de4, 0px 10px 15px rgba(0, 0, 0, 0.2);
+	
 	font: bold 14px Arial, sans-serif;
 }
 
@@ -109,13 +110,13 @@ html {
 	width: 66px;
 	height: 36px;
 	
-	background: white;
+	background: #28502E;
 	border-radius: 3px;
 	box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
 	
 	margin: 0 7px 11px 0;
 	
-	color: #888;
+	color: white;
 	line-height: 36px;
 	text-align: center;
 	
@@ -129,30 +130,30 @@ html {
 /* Remove right margins from operator keys */
 /* style different type of keys (operators/evaluate/clear) differently */
 .keys span.operator {
-	background: #FFF0F5;
+	background: #1B2F33;
 	margin-right: 0;
 }
 
 .keys span.eval {
-	background: #f1ff92;
+	background: #1B2F33;
 	box-shadow: 0px 4px #9da853;
 	color: #888e5f;
 }
 
 .top span.clear {
-	background: #ff9fa8;
-	box-shadow: 0px 4px #ff7c87;
+	background: #EF3054;
+	box-shadow: 0px 4px #EF3050;
 	color: white;
 }
 
 /* Some hover effects */
 .keys span:hover {
-	background: #9c89f6;
-	box-shadow: 0px 4px #6b54d3;
+	background: #47682C;
+	
 	color: white;
 }
 
-.keys span.eval:hover {
+/*.keys span.eval:hover {
 	background: #abb850;
 	box-shadow: 0px 4px #717a33;
 	color: #ffffff;
@@ -164,7 +165,7 @@ html {
 	color: white;
 }
 
-/* Simulating "pressed" effect on active state of the keys by removing the box-shadow and moving the keys down a bit */
+ Simulating "pressed" effect on active state of the keys by removing the box-shadow and moving the keys down a bit 
 .keys span:active {
 	box-shadow: 0px 0px #6b54d3;
 	top: 4px;
@@ -180,4 +181,4 @@ html {
 	box-shadow: 0px 0px #d3545d;
 
 /*custom CSS by kushsolitary on thecodeplayer.com*/
-}
+/*/
