fixed picture margins and updated calculator image to show css changes

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -199,3 +199,12 @@ ul {
     font-family: 'Mogra', cursive;
 }
 
+.imagesize{
+    width: 70%;
+    height: 70%;
+
+}
+
+.imagesmargin{
+    margin-left: -2%;
+}
