--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,14 +1,11 @@
 #map {
-
 	width: 725px;
 	height: 400px;
 }
 
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
 
-a.btn-social,
-.btn-social
-{
+a.btn-social, .btn-social {
     border-radius: 50%;
     color: #ffffff !important;
     display: inline-block;
@@ -22,8 +19,7 @@ a.btn-social,
     width: 54px;
 }
 
-.btn-social .fa,.btn-social i
-{
+.btn-social .fa,.btn-social i {
     backface-visibility: hidden;
     moz-backface-visibility: hidden;
     ms-transform: scale(1);
@@ -34,37 +30,37 @@ a.btn-social,
     webkit-transform: scale(1);
     webkit-transition: all .25s;
 }
-.btn-social:hover,.btn-social:focus
-{
+
+.btn-social:hover,.btn-social:focus {
     color: #fff;
     outline: none;
     text-decoration: none;
 }
-.btn-social:hover .fa,.btn-social:focus .fa,.btn-social:hover i,.btn-social:focus i
-{
+
+.btn-social:hover .fa,.btn-social:focus .fa,.btn-social:hover i,.btn-social:focus i {
     ms-transform: scale(1.3);
     o-transform: scale(1.3);
     transform: scale(1.3);
     webkit-transform: scale(1.3);
 }
-.btn-social.btn-xs
-{
+
+.btn-social.btn-xs {
     font-size: 9px;
     height: 24px;
     line-height: 13px;
     margin: 6px 2px;
     width: 24px;
 }
-.btn-social.btn-sm
-{
+
+.btn-social.btn-sm {
     font-size: 13px;
     height: 36px;
     line-height: 18px;
     margin: 6px 2px;
     width: 36px;
 }
-.btn-social.btn-lg
-{
+
+.btn-social.btn-lg {
     font-size: 22px;
     height: 72px;
     line-height: 40px;
@@ -72,98 +68,92 @@ a.btn-social,
     width: 72px;
 }
 
-
-.btn-dropbox
-{
+.btn-dropbox {
     background-color: #007ee5;
 }
-.btn-dropbox:hover
-{
+
+.btn-dropbox:hover {
     background-color: #1998ff;
 }
-.btn-facebook
-{
+
+.btn-facebook {
     background-color: #3b5998;
 }
-.btn-facebook:hover
-{
+
+.btn-facebook:hover {
     background-color: #4c70ba;
 }
 
-.btn-github
-{
+.btn-github {
     background-color: #4183c4;
 }
-.btn-github:hover
-{
+
+.btn-github:hover {
     background-color: #689cd0;
 }
-.btn-google-plus
-{
+
+.btn-google-plus {
     background-color: #dd4b39;
 }
-.btn-google-plus:hover
-{
+
+.btn-google-plus:hover {
     background-color: #e47365;
 }
-.btn-instagram
-{
+
+.btn-instagram {
     background-color: #3f729b;
 }
-.btn-instagram:hover
-{
+
+.btn-instagram:hover {
     background-color: #548cb9;
 }
 
-.btn-linkedin
-{
+.btn-linkedin {
     background-color: #0976b4;
 }
+
 .btn-linkedin:hover
 {
     background-color: #0b96e5;
 }
 
-.btn-pinterest
-{
+.btn-pinterest {
     background-color: #cc2127;
 }
-.btn-pinterest:hover
-{
+
+.btn-pinterest:hover {
     background-color: #e04046;
 }
 
-.btn-skype
-{
+.btn-skype {
     background-color: #00aff0;
 }
-.btn-skype:hover
-{
+
+.btn-skype:hover {
     background-color: #24c4ff;
 }
 
-.btn-trello
-{
+.btn-trello {
     background-color: #256a92;
 }
-.btn-trello:hover
-{
+
+.btn-trello:hover {
     background-color: #2f88bb;
 }
-.btn-tumblr
-{
+
+.btn-tumblr {
     background-color: #35465c;
 }
-.btn-tumblr:hover
-{
+
+.btn-tumblr:hover {
     background-color: #485f7c;
 }
-.btn-twitter
-{
+
+.btn-twitter {
     background-color: #55acee;
 }
-.btn-twitter:hover
-{
+
+.btn-twitter:hover {
     background-color: #83c3f3;
 }
 
@@ -183,28 +173,27 @@ ul {
     /* IE7 and lower use default */
 }
 
-   
 .resume-stuff {
     content: '\22C6\A0';
 }
-#stevesays{
+
+#stevesays {
     cursor: pointer;
 }
 
-.blog-title{
+.blog-title {
     text-align: center;
 }
 
-#signature{
+#signature {
     font-family: 'Mogra', cursive;
 }
 
-.imagesize{
+.imagesize {
     width: 70%;
     height: 70%;
 }
 
-
-.imagesmargin{
+.imagesmargin {
     margin-left: -2%;
 }
